--- a/subrepos/mpv/uosc/src/uosc.conf
+++ b/subrepos/mpv/uosc/src/uosc.conf
@@ -14,6 +14,8 @@ timeline_border=1
 timeline_step=5
 # Render cache indicators for streaming content
 timeline_cache=yes
+# Render heatmap for youtube videos. Available: overlay, above, no
+timeline_heatmap=overlay
 
 # When to display an always visible progress bar (minimized timeline). Can be: windowed, fullscreen, always, never
 # Can also be toggled on demand with `toggle-progress` command.
@@ -23,7 +25,7 @@ progress_line_width=20
 
 # A comma delimited list of controls above the timeline. Set to `never` to disable.
 # Parameter spec: enclosed in `{}` means value, enclosed in `[]` means optional
-# Full item syntax: `[<[!]{disposition1}[,[!]{dispositionN}]>]{element}[:{paramN}][#{badge}[>{limit}]][?{tooltip}]`
+# Full item syntax: `[<{dispositions}>]{element}[:{paramN}][#{badge}[>{limit}]][?{tooltip}]`
 # Common properties:
 #   `{icon}` - parameter used to specify an icon name (example: `face`)
 #            - pick here: https://fonts.google.com/icons?icon.platform=web&icon.set=Material+Icons&icon.style=Rounded
@@ -46,7 +48,8 @@ progress_line_width=20
 #           - multiple spaces divide the available space among themselves, which can be used for centering
 #   `button:{name}` - button whose state, look, and click action are managed by external script
 # Item visibility control:
-#   `<[!]{disposition1}[,[!]{dispositionN}]>` - optional prefix to control element's visibility
+#   `<[!]{disposition1}[+[!]{dispositionN}][,{more_dispositions}]>` - optional prefix to control element's visibility
+#   - `+` creates an AND condition, `,` splits into OR groups. Example: `<foo,bar+baz>` -> `foo OR (bar AND baz)`
 #   - `{disposition}` can be one of:
 #     - `idle` - true if mpv is in idle mode (no file loaded)
 #     - `image` - true if current file is a single image
@@ -62,10 +65,11 @@ progress_line_width=20
 #     - `has_chapter` - true for files with chapter list
 #     - `stream` - true if current file is read from a stream
 #     - `has_playlist` - true if current playlist has 2 or more items in it
+#     - `{mpv_prop}` - any mpv property (note: set `user-data/foo` in a script to add custom ones)
 #   - prefix with `!` to negate the required disposition
 #   Examples:
 #     - `<stream>stream-quality` - show stream quality button only for streams
-#     - `<has_audio,!audio>audio` - show audio tracks button for all files that have
+#     - `<has_audio+!audio>audio` - show audio tracks button for all files that have
 #                                   an audio track, but are not exclusively audio only files
 # Place `#{badge}[>{limit}]` after the element params to give it a badge. Available badges:
 #   `sub`, `audio`, `video` - track type counters
@@ -80,7 +84,7 @@ progress_line_width=20
 #   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit!?Fullscreen
 #   loop-playlist = cycle:repeat:loop-playlist:no/inf!?Loop playlist
 #   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes!
-controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
+controls=menu,gap,<video,audio>subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,<video,audio>speed,space,shuffle,loop-playlist,loop-file,gap,prev,items,next,gap,fullscreen
 controls_size=32
 controls_margin=8
 controls_spacing=2
@@ -150,11 +154,11 @@ text_border=1.2
 # Border radius of buttons, menus, and all other rectangles
 border_radius=4
 # A comma delimited list of color overrides in RGB HEX format. Defaults:
-# foreground=ffffff,foreground_text=000000,background=000000,background_text=ffffff,curtain=111111,success=a5e075,error=ff616e
+# foreground=ffffff,foreground_text=000000,background=000000,background_text=ffffff,curtain=111111,success=a5e075,error=ff616e,match=69c5ff,heatmap=00adee
 color=
 # A comma delimited list of opacity overrides for various UI element backgrounds and shapes.
 # This does not affect any text, which is always rendered fully opaque. Defaults:
-# timeline=0.9,position=1,chapters=0.8,slider=0.9,slider_gauge=1,controls=0,speed=0.6,menu=1,submenu=0.4,border=1,title=1,tooltip=1,thumbnail=1,curtain=0.8,idle_indicator=0.8,audio_indicator=0.5,buffering_indicator=0.3,playlist_position=0.8
+# timeline=0.9,position=1,chapters=0.8,slider=0.9,slider_gauge=1,controls=0,speed=0.6,menu=1,submenu=0.4,border=1,title=1,tooltip=1,thumbnail=1,curtain=0.8,idle_indicator=0.8,audio_indicator=0.5,buffering_indicator=0.3,playlist_position=0.8,heatmap=0.4
 opacity=
 # A comma delimited list of features to refine at a cost of some performance impact.
 # text_width - Use a more accurate text width measurement that measures each text string individually
@@ -164,10 +168,6 @@ opacity=
 refine=
 # Duration of animations in milliseconds
 animation_duration=100
-# Execute command for background clicks shorter than this number of milliseconds, 0 to disable
-# Execution always waits for `input-doubleclick-time` to filter out double-clicks
-click_threshold=0
-click_command=cycle pause; script-binding uosc/flash-pause-indicator
 # Flash duration in milliseconds used by `flash-{element}` commands
 flash_duration=1000
 # Distances in pixels below which elements are fully faded in/out
@@ -240,3 +240,6 @@ subtitles_directory=~~/subtitles
 #   window_border, top_bar, timeline, controls, volume,
 #   idle_indicator, audio_indicator, buffering_indicator, pause_indicator
 disable_elements=
+
+# List of mpv.conf properties respected by uosc:
+# osd-font, osd-playlist-entry, slang
